--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,7 +25,7 @@ body {
   position: relative;
   font-family: 'Roboto Condensed', 'Helvetica', 'Arial', sans-serif;
   font-weight: 300;
-  background-color: #FFFFFF;
+  background-color: #FFFF00;
   box-sizing: border-box;
   min-height: 100%;
 }
